<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PSA</string>


    <string name="action_settings">Settings</string>
    <string name="drawer_open">Emergências</string>
    <string name="drawer_close">+Opções</string>
    <string name="btn_add_emergency">Adicionar Emergência</string>
    <string name="others">Outros</string>


    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>


    <!-- End Main Activity-->


    <!-- Fragment Home-->

    <string name="fragment_emergencies_title">Emergências</string>
    <string name="fragment_emergencies_subtitle">Clique para disparar uma emergência.</string>
    <string name="fragment_emergencies_subtitle_no_emergencies">Sem emergências. Clique no botão abaixo para adicionar.</string>
    <string name="fragment_emergencies_sending_emergency">Enviado emergência...</string>

    <!-- End Fragment Home-->




    <!-- Fragment Emergency Manager-->

    <string name="fragment_emergency_management_title">Gerenciamento</string>
    <string name="fragment_emergency_management_remove_item">Tem certeza que deseja remover esta Emergência: </string>
    <string name="fragment_emergency_management_remove_item_title">Remover Emergência</string>
    <string name="fragment_emergency_management_dialog_options_title">Escolha uma opção</string>

    <string-array name="fragment_emergency_management_array_item_options">
        <item>Remover</item>
        <item>Editar</item>
    </string-array>
    <!-- End Fragment Emergency Manager-->




    <!-- Emergency View Activity -->

    <string name="activity_emergency_view_txt_title">Adicionando Emergência</string>
    <string name="activity_emergency_view_txt_name_emergency">Nome da Emergência:</string>
    <string name="activity_emergency_view_txt_message">Mensagem:</string>
    <string name="activity_emergency_view_txt_list_contacts">Lista de Contatos:</string>
    <string name="activity_emergency_view_btn_save">Salvar Emergência</string>
    <string name="activity_emergency_view_btn_cancel">Cancelar</string>
    <string name="activity_emergency_view_actionbar_add_contact">Adicionar um Contato</string>


    <string name="activity_emergency_view_message_empty_name">O campo \"Nome da Emergência\", não pode estar vazio!</string>
    <string name="activity_emergency_view_message_empty_number_list">O campo \"Lista de Contatos\", não pode estar vazio!</string>
    <string name="activity_emergency_view_message_empty_message">O campo \"Mensagem\", não pode estar vazio!</string>

    <string name="activity_emergency_view_message_item_already_exist">Este contato já foi adicionado.</string>
    <string name="activity_emergency_view_btn_delete_contact">Apagar Contato</string>
    <string name="activity_emergency_view_message_error_save">Houve algum erro ao salvar a Emergência. Tente Novamente.</string>

    <string name="activity_emergency_view_checkbox_doctor_send">Ativar envio para um médico.</string>
    <string name="activity_emergency_view_txt_doctor_message">Mensagem para o médico:</string>
    <string name="activity_emergency_view_txt_doctor_number">Número do médico:</string>
    <string name="activity_emergency_view_message_empty_doctor_message">O campo \"Mensagem para o médico\", não pode estar vazio!</string>
    <string name="activity_emergency_view_message_empty_doctor_number">O campo \"Número do médico\", não pode estar vazio!</string>

    <!-- End Emergency View Fragment-->




    <!-- Emergency Receiver Activity -->

    <string name="activity_emergency_receiver_txt_title">Emergência Recebida</string>
    <string name="activity_emergency_receiver_txt_sender">Remetente:</string>
    <string name="activity_emergency_receiver_txt_message_received">Mensagem Recebida:</string>
    <string name="activity_emergency_receiver_txt_datetime_received">Hora e Data de Envio:</string>
    <string name="activity_emergency_receiver_static_map_received">Localização do Remetente:</string>

    <!-- End Emergency Receiver Fragment-->






    <!-- Emergency History Fragment -->

    <string name="fragment_emergency_history_sender">Emergência Recebida:</string>
    <string name="fragment_emergency_history_from_sender">De:</string>
    <string name="fragment_emergency_history_title">Histórico de Emergências</string>
    <string name="fragment_emergency_history_button">Ver Emergência</string>


    <!-- End Emergency History Fragment-->





    <!-- Emergency Manager Fragment -->

    <string name="fragment_emergency_manager_removed_item">- Removido</string>

    <!-- End Emergency Manager Fragment-->







    <!-- Settings Fragment -->

    <string name="fragment_settings_title">Configurações</string>
    <string name="fragment_settings_label_alert_time">Intervalo de tempo, entre um alerta e outro, tocado quando uma emergência é recebida.</string>
    <string name="fragment_settings_label_alert_time_explanation">20 segundos.</string>
    <string name="fragment_settings_label_use_gps">Permitir uso do GPS</string>
        <string name="fragment_settings_label_use_gps_explanation">Recomendado deixar ativado para acessar a sua localização no envio de uma emergência.</string>
    <string name="fragment_settings_label_title_name">Nome</string>
    <string name="fragment_settings_label_default_name">Seu nome</string>

    <string name="fragment_settings_dialog_change_alert_time_interval_title">Escolha o tempo</string>
    <string name="fragment_settings_dialog_change_name_title">Digite seu nome</string>
    <string name="fragment_settings_dialog_label_button_ok">Ok</string>
    <string name="fragment_settings_dialog_label_button_cancel">Cancelar</string>

    <string name="fragment_settings_dialog_gps_disabled_title">O GPS está desativado.</string>
    <string name="fragment_settings_dialog_gps_disabled_message_content">Deseja ativá-lo agora?</string>


    <string-array name="fragment_settings_array_time_alarm">
        <item>10 segundos</item>
        <item>20 segundos</item>
        <item>30 segundos</item>
    </string-array>


    <string-array name="fragment_settings_array_time_alarm_values">
        <item>10000 </item>
        <item>20000</item>
        <item>30000</item>
    </string-array>



    <!-- End Settings Fragment-->





    <!-- Information Fragment  -->

    <string name="fragment_information_title">Informações</string>
    <string name="fragment_information_subtitle">UFRJ - NCE </string>
    <string name="fragment_information_deployment_title">Desenvolvedor</string>
    <string name="fragment_information_deployment_value">Fábio Filho, fabiofilho@dcc.ufrj.br</string>
    <string name="fragment_information_leader_title">Professor Orientador</string>
    <string name="fragment_information_leader_value">Marcos Borges, mborges@nce.ufrj.br</string>

    <!-- End Information Fragment  -->
</resources>
