<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <SwitchPreference
        android:key="example_switch"
        android:title="@string/fragment_settings_label_use_gps"
        android:summary="@string/fragment_settings_label_use_gps_explanation"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <edit
        android:key="example_text"
        android:title="@string/fragment_settings_label_title_name"
        android:defaultValue="@string/fragment_settings_label_default_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="example_list"
        android:title="@string/fragment_settings_label_alert_time"
        android:defaultValue="-1"
        android:entries="@array/fragment_settings_array_time_alarm"
        android:entryValues="@array/fragment_settings_array_time_alarm_values"
        android:summary="@string/fragment_settings_label_alert_time_explanation"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />




</PreferenceScreen>